<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/calendar"
        android:title="@string/title_calendar"
        android:icon="@drawable/ic_baseline_calendar_today_24"/>

    <item
        android:id="@+id/competition"
        android:title="@string/title_competition"
        android:icon="@drawable/ic_baseline_whatshot_24" />

    <item
        android:id="@+id/schedule"
        android:title="@string/title_schedule"
        android:icon="@drawable/ic_baseline_schedule_24"/>

    <item
        android:id="@+id/chatroom"
        android:title="@string/title_chatroom"
        android:icon="@drawable/ic_baseline_chat_24"/>

    <item
        android:id="@+id/profile"
        android:title="@string/title_profile"
        android:icon="@drawable/ic_baseline_person_24"/>
</menu>